--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,7 +8,7 @@ body {
 .container {
     width: 90%;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 20px;
 }
 
 /* HEADER/NAVIGATION SIMPLE */
