--- a/public/css/style_covoiturage.css
+++ b/public/css/style_covoiturage.css
@@ -100,7 +100,7 @@
     .trip-cell::before {
         content: attr(data-label);
         font-weight: bold;
-        color: #4CAF50;
+        color: var(--color-ecogreen);
         margin-right: 15px;
         text-transform: uppercase;
         font-size: 0.85em;
