--- a/public/css/style_menu.css
+++ b/public/css/style_menu.css
@@ -1,6 +1,6 @@
 /* HEADER/NAVIGATION COMPLET (US2) */
 .main-header {
-    background-color: #4CAF50; /* Vert EcoRide */
+    background-color: var(--color-ecogreen);
     padding: 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -44,11 +44,11 @@
 
 .main-nav a:hover,
 .main-nav a.active {
-    background-color: #45a049; /* Vert légèrement plus foncé au survol */
+    background-color: var(--color-ecogreen-survol);
 }
 
 .auth-button a {
-    background-color: #2c3e50; /* Bouton Connexion Bleu Nuit */
+    background-color: var(--color-connexion);
     color: white;
     padding: 8px 15px;
     border-radius: 4px;
